--- a/bibl.bib
+++ b/bibl.bib
@@ -1,4 +1,4 @@
-Copyright (c) 2021 Carl Martin Ludvig Sinander.
+Copyright (c) 2022 Carl Martin Ludvig Sinander.
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -583,6 +583,18 @@ published papers
 	doi			= "10.1016/j.jmateco.2019.06.002",
 }
 
+@article{ErlansonKleiner2020,
+	author		= "Albin Erlanson and Andreas Kleiner",
+	year		= "2020",
+	title		= "Costly verification in collective decisions",
+	journaltitle= te,
+	volume		= "15",
+	number		= "3",
+	pages		= "923--954",
+	langid		= "american",
+	doi			= "10.3982/TE3101",
+}
+
 @article{EsoSzentes2007rand,
 	author		= "Péter Es\H{o} and Balázs Szentes",
 	year		= "2007",
@@ -998,6 +1010,18 @@ published papers
 	doi			= "10.1111/j.1468-0262.2007.00737.x",
 }
 
+@article{JehielMoldovanuStacchetti1999,
+	author		= "Philippe Jéhiel and Benny Moldovanu and Ennio Stacchetti",
+	year		= "1999",
+	title		= "Multidimensional mechanism design for auctions with externalities",
+	journaltitle= jet,
+	volume		= "85",
+	number		= "2",
+	pages		= "258--293",
+	langid		= "american",
+	doi			= "10.1006/jeth.1998.2501",
+}
+
 @article{Jovanovic1982,
 	author		= "Boyan Jovanovic",
 	year		= "1982",
@@ -1163,6 +1187,18 @@ published papers
 	pages		= "1473--1518",
 	langid		= "american",
 	doi			= "10.2307/1913516",
+}
+
+@article{MatsushimaMiyazakiYagi2010,
+	author		= "Hitoshi Matsushima and Koichi Miyazaki and Nobuyuki Yagi",
+	year		= "2010",
+	title		= "Role of linking mechanisms in multitask agency with hidden information",
+	journaltitle= jet,
+	volume		= "145",
+	number		= "6",
+	pages		= "2241--2259",
+	langid		= "american",
+	doi			= "10.1016/j.jet.2010.03.014",
 }
 
 @article{Matthews1984,
@@ -1584,8 +1620,18 @@ working papers
 	author		= "Gregorio Curello and Ludvig Sinander",
 	year		= "2021",
 	title		= "Screening for breakthroughs",
-	note		= "working paper, 13 Jul 2021",
+	note		= "working paper, 22 Nov 2021",
 	langid		= "american",
+	doi			= "10.48550/arXiv.2011.10090",
+}
+
+@unpublished{BallJacksonKattwinkel2022,
+	author		= "Ian Ball and Matt O. Jackson and Deniz Kattwinkel",
+	year		= "2022",
+	title		= "Comment on Jackson and Sonnenschein (2007) ``Overcoming incentive constraints by linking decisions''",
+	note		= "working paper, 9 May 2022",
+	langid		= "american",
+	doi			= "10.48550/arXiv.2205.03352",
 }
 
 @unpublished{BenporathDekelLipmanInprogress,
@@ -1598,9 +1644,9 @@ working papers
 
 @unpublished{BlochDuttaDziubinski2021,
 	author		= "Francis Bloch and Bhaskar Dutta and Marcin Dziubi\'{n}ski",
-	year		= "2021",
-	title		= "Selecting a winner with external referees",
-	note		= "working paper, May 2021",
+	year		= "2022",
+	title		= "Selecting a winner with impartial referees",
+	note		= "working paper, March 2022",
 	langid		= "american",
 }
 
@@ -1618,6 +1664,15 @@ working papers
 	title		= "Optimal mechanism for the sale of a durable good",
 	note		= "working paper, 28 May 2021",
 	langid		= "american",
+	doi			= "10.48550/arXiv.1904.07456",
+}
+
+@unpublished{ErlansonKleiner2022,
+	author		= "Albin Erlanson and Andreas Kleiner",
+	year		= "2022",
+	title		= "Optimal allocations with capacity constrained verification",
+	note		= "work in progress",
+	langid		= "american",
 }
 
 @unpublished{EsoSzentes2003,
@@ -1625,14 +1680,6 @@ working papers
 	year		= "2003",
 	title		= "The one who controls the information appropriates its rents",
 	note		= "working paper, Apr 2003",
-	langid		= "american",
-}
-
-@unpublished{GuoShmaya2021,
-	author		= "Yingni Guo and Eran Shmaya",
-	year		= "2021",
-	title		= "Project choice from a verifiable proposal",
-	note		= "working paper, 8 May 2021",
 	langid		= "american",
 }
 
@@ -1645,14 +1692,6 @@ working papers
 	langid		= "american",
 }
 
-@unpublished{GolosovIovino2019,
-	author		= "Mikhail Golosov and Luigi Iovino",
-	year		= "2019",
-	title		= "Social insurance, information revelation, and lack of commitment",
-	note		= "working paper, Oct 2019",
-	langid		= "american",
-}
-
 @unpublished{Garfagnini2011,
 	author		= "Umberto Garfagnini",
 	year		= "2011",
@@ -1661,11 +1700,35 @@ working papers
 	langid		= "american",
 }
 
+@unpublished{GolosovIovino2019,
+	author		= "Mikhail Golosov and Luigi Iovino",
+	year		= "2019",
+	title		= "Social insurance, information revelation, and lack of commitment",
+	note		= "working paper, Oct 2019",
+	langid		= "american",
+}
+
 @unpublished{GuoHorner2020,
 	author		= "Yingni Guo and Johannes Hörner",
 	year		= "2020",
 	title		= "Dynamic allocation without money",
 	note		= "working paper, 26 Aug 2020",
+	langid		= "american",
+}
+
+@unpublished{GuoShmaya2021,
+	author		= "Yingni Guo and Eran Shmaya",
+	year		= "2021",
+	title		= "Project choice from a verifiable proposal",
+	note		= "working paper, 9 Sep 2021",
+	langid		= "american",
+}
+
+@unpublished{Ishii2016,
+	author		= "Yuhta Ishii",
+	year		= "2016",
+	title		= "Implementation with quota mechanisms",
+	note		= "work in progress",
 	langid		= "american",
 }
 
@@ -1694,6 +1757,17 @@ working papers
 	subtitle	= "Too good to be true",
 	note		= "working paper, 11 Dec 2019",
 	langid		= "american",
+	doi			= "10.2139/ssrn.3615398",
+}
+
+@unpublished{KattwinkelKnoepfle2022,
+	author		= "Deniz Kattwinkel and Jan Knoepfle",
+	year		= "2022",
+	title		= "Costless information and costly verification",
+	subtitle	= "A case for transparency",
+	note		= "working paper, 8 Mar 2022",
+	langid		= "american",
+	doi			= "10.2139/ssrn.3426817",
 }
 
 @unpublished{Liu2015,
@@ -1725,13 +1799,6 @@ working papers
 	year		= "2001",
 	title		= "Trading favors",
 	note		= "working paper, May 2001",
-	langid		= "american",
-}
-
-@unpublished{PoggiSinanderInprogress,
-	author		= "Francisco Poggi and Ludvig Sinander",
-	year		= "in progress",
-	title		= "Delayed disclosure",
 	langid		= "american",
 }
 
@@ -1767,8 +1834,7 @@ working papers
 	title		= "The converse envelope theorem",
 	note		= "working paper, 14 Jul 2021",
 	langid		= "american",
-	archivePrefix= "arXiv",
-	eprint		= "1909.11219",
+	doi			= "10.48550/arXiv.1909.11219",
 }
 
 
