--- a/ch3.tex
+++ b/ch3.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2021 Carl Martin Ludvig Sinander.
+% Copyright (c) 2022 Carl Martin Ludvig Sinander.
 
 % This program is free software: you can redistribute it and/or modify
 % it under the terms of the GNU General Public License as published by
@@ -239,8 +239,11 @@ Note that we haven't quite proved approximate optimality---some extra steps are 
 
 \paragraph{The literature.}
 \textcite{JacksonSonnenschein2007} showed that the principal's first-best can be approximated by `linking' the allocations across different periods via something like a discounted quota.
-\textcite{Frankel2016jet} is a clear-eyed and general formulation of this idea, with good references references to related work.
-(Neither of these papers considers precisely the model above,
+(The theorem in this paper is true as stated, but the proof is wrong. See \textcite{BallJacksonKattwinkel2022} for a correct proof.)
+\textcite{MatsushimaMiyazakiYagi2010,Ishii2016} go further, characterising the full set of allocations that are (virtually) implementable via quota mechanisms.
+(The characterisation: virtual implementability via quotas is equivalent to implementability using monetary transfers.)
+\textcite{Frankel2016jet} is a clear-eyed and general formulation of the quotas idea, with good references references to related work.
+(None of these papers considers precisely the model above,
 and the mechanism in Jackson--Sonnenschein is not quite a discounted-quota mechanisms.)
 \textcite{Frankel2016aej} provides a similarly insightful and general treatment of the idea in \Cref{remark:het}.
 
