--- a/ch4.tex
+++ b/ch4.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2021 Carl Martin Ludvig Sinander.
+% Copyright (c) 2022 Carl Martin Ludvig Sinander.
 
 % This program is free software: you can redistribute it and/or modify
 % it under the terms of the GNU General Public License as published by
@@ -169,9 +169,8 @@ we associate a function $d : [0,\infty) \to [0,\infty]$ defined by
 \end{equation*}
 %
 $d$ is the lower boundary of the delegation set $D$, and fully describes $D$.%
-	\footnote{That's loose: it really only determines $D$ up to (upward) closure.
-	In particular, given $d$, we may recover the \emph{closure} $\cl D$ of $D$ as $\cl D = \left\{ (u,v) : d(u) \leq v \right\}$.
-	(The [topological] closure and upward closure of $D$ coincide, by the way.)}
+	\footnote{Okay, it really only determines $D$ up to (topological) closure.
+	In particular, given $d$, we may recover the \emph{closure} $\cl D$ of $D$ as $\cl D = \left\{ (u,v) : d(u) \leq v \right\}$.}
 Our remaining task is to characterise the optimal choice $d$ of boundary.
 
 To understand the trade-off involved,
@@ -527,7 +526,7 @@ The authors show that this `maxing-out' will happen a.s. in finite time. (If you
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Single breakthroughs, general payoffs}
+\subsection{Single breakthrough, general payoffs}
 \label{sec:ch4:dynamics:sfb}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
