--- a/ms.tex
+++ b/ms.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2021 Carl Martin Ludvig Sinander.
+% Copyright (c) 2022 Carl Martin Ludvig Sinander.
 
 % This program is free software: you can redistribute it and/or modify
 % it under the terms of the GNU General Public License as published by
@@ -67,7 +67,7 @@
 \author{Ludvig Sinander \\
 University of Oxford}
 
-\date{\small This version: 11 November 2021}
+\date{\small This version: 9 June 2022}
 
 % \date{\emph{version:} {\datestyle\today} at {\currenttime} \\ \hspace{0pt} \\ \hspace{0pt} \\ \bfseries please report typos!}
 
@@ -99,7 +99,7 @@ University of Oxford}
 \pagebreak
 \hspace{1pt}\vfill
 \noindent
-Copyright \copyright{} 2021 Carl Martin Ludvig Sinander.
+Copyright \copyright{} 2022 Carl Martin Ludvig Sinander.
 
 \begin{quotation}
 \noindent
@@ -124,7 +124,7 @@ Visit \href{https://www.gnu.org/licenses/copyleft}{gnu.org/licenses/copyleft} to
 
 These are the notes for a second-year graduate course that I taught at Oxford in autumn 2021.
 Thanks to Gregorio Curello, Deniz Kattwinkel, Elliot Lipnowski, Qingmin Liu, Alex Teytelboym and to my students for comments, suggestions and insights,
-and to Catharina Behrens, Josh le Cornu, Tanxin Gao, Sanjari Kalantri, Marie Kaul, Arvo Munoz Moran and Filip Tokarski for reporting errors.
+and to Catharina Behrens, Josh le Cornu, Tanxin Gao, Sanjari Kalantri, Marie Kaul, Arvo Munoz Moran, Filip Tokarski and Yidan Xu for reporting errors.
 
 
 
@@ -330,7 +330,7 @@ But to understand what I'm saying,
 it is necessary at least to know some of the basic \emph{language} of measure theory; that's what I'll cover here.
 
 (If you'd like to pursue research in economic theory, I would advise you to learn basic measure theory.
-I taught myself during the MPhil from \textcite{Rosenthal2006}; this book is very accessible, except that the first chapter is harder than it needs to be, so don't get stuck there! I now prefer the first few chapters of \textcite{Folland1999}, a very beautiful book for first-year graduate students in maths. There are lots of other standard books. Efe Ok has a `measure and probability' manuscript on his website that is specifically aimed at economists, in case you find that appealing.)
+I taught myself from \textcite{Rosenthal2006}; this book is very accessible, except that chapter 2 is harder than it needs to be, so don't get stuck there! I now prefer the first few chapters of \textcite{Folland1999}, a very beautiful book for first-year graduate students in maths. There are lots of other standard books. Efe Ok has a `measure and probability' manuscript on his website that is specifically aimed at economists, in case you find that appealing.)
 
 
 Let $X$ be a non-empty set.
