--- a/bibl.bib
+++ b/bibl.bib
@@ -1628,7 +1628,7 @@ working papers
 @unpublished{BallJacksonKattwinkel2022,
 	author		= "Ian Ball and Matt O. Jackson and Deniz Kattwinkel",
 	year		= "2022",
-	title		= "Comment on Jackson and Sonnenschein (2007) ``Overcoming incentive constraints by linking decisions''",
+	title		= "Comment on {J}ackson and {S}onnenschein (2007) ``{O}vercoming incentive constraints by linking decisions''",
 	note		= "working paper, 9 May 2022",
 	langid		= "american",
 	doi			= "10.48550/arXiv.2205.03352",
@@ -1716,11 +1716,11 @@ working papers
 	langid		= "american",
 }
 
-@unpublished{GuoShmaya2021,
+@unpublished{GuoShmaya2022,
 	author		= "Yingni Guo and Eran Shmaya",
 	year		= "2021",
-	title		= "Project choice from a verifiable proposal",
-	note		= "working paper, 9 Sep 2021",
+	title		= "Regret-minimizing project choice",
+	note		= "working paper, 6 Jul 2022",
 	langid		= "american",
 }
 
@@ -1765,9 +1765,9 @@ working papers
 	year		= "2022",
 	title		= "Costless information and costly verification",
 	subtitle	= "A case for transparency",
-	note		= "working paper, 8 Mar 2022",
+	note		= "working paper, 21 Jun 2022",
 	langid		= "american",
-	doi			= "10.2139/ssrn.3426817",
+	doi			= "10.1086/721618",
 }
 
 @unpublished{Liu2015,
@@ -1828,11 +1828,11 @@ working papers
 	langid		= "american",
 }
 
-@unpublished{Sinander2021,
+@unpublished{Sinander2022,
 	author		= "Ludvig Sinander",
-	year		= "2021",
+	year		= "2022",
 	title		= "The converse envelope theorem",
-	note		= "working paper, 14 Jul 2021",
+	note		= "working paper, 20 Jun 2022",
 	langid		= "american",
 	doi			= "10.48550/arXiv.1909.11219",
 }
