--- a/ms.tex
+++ b/ms.tex
@@ -43,7 +43,7 @@
 
 % % watermark on every page (for version control)
 % \usepackage[anchor=ll,pos={0.1cm,0.5cm},fontsize=0.2cm,angle=0,alignment=l]{draftwatermark}
-% \SetWatermarkText{\, version:\\{\datestyle\today}\\\, at {\currenttime}}
+% \SetWatermarkText{\normalfont \, version:\\\normalfont {\datestyle\today}\\\normalfont \, at {\currenttime}}
 
 
 %%% bibliography
@@ -67,7 +67,7 @@
 \author{Ludvig Sinander \\
 University of Oxford}
 
-\date{\small This version: 9 June 2022}
+\date{\small This version: 19 August 2022}
 
 % \date{\emph{version:} {\datestyle\today} at {\currenttime} \\ \hspace{0pt} \\ \hspace{0pt} \\ \bfseries please report typos!}
 
@@ -122,7 +122,7 @@ Visit \href{https://www.gnu.org/licenses/copyleft}{gnu.org/licenses/copyleft} to
 %%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%
 
-These are the notes for a second-year graduate course that I taught at Oxford in autumn 2021.
+These are the notes for a second-year graduate course that I taught at Oxford in the autumns of 2021 and 2022.
 Thanks to Gregorio Curello, Deniz Kattwinkel, Elliot Lipnowski, Qingmin Liu, Alex Teytelboym and to my students for comments, suggestions and insights,
 and to Catharina Behrens, Josh le Cornu, Tanxin Gao, Sanjari Kalantri, Marie Kaul, Arvo Munoz Moran, Filip Tokarski and Yidan Xu for reporting errors.
 
@@ -210,7 +210,7 @@ Along the way, we'll encounter a number of perspectives, tools, tricks and insig
 
 % \emph{Topics:}
 % the revelation principle;
-% the envelope theorem \parencite{MilgromSegal2002,Sinander2021};
+% the envelope theorem \parencite{MilgromSegal2002,Sinander2022};
 % Spence--Mirrlees characterisation of IC;
 % the optimality of posting a price \parencite{Myerson1981};
 % selling several goods \parencite[focus on examples from][]{HartReny2015}.
@@ -270,7 +270,7 @@ Along the way, we'll encounter a number of perspectives, tools, tricks and insig
 
 % \emph{Potential topics:}
 % the original paper \parencite{ArmstrongVickers2010};
-% random mechanisms \parencite{GuoShmaya2021};
+% random mechanisms \parencite{GuoShmaya2022};
 % dynamic models \parencite{BirdFrug2019,sfb}.
 
 
